--- a/6.Scroll-Activated Animations/index.html
+++ b/6.Scroll-Activated Animations/index.html
@@ -54,11 +54,6 @@
     </div>
   </body>
   <script>
-    const texts = document.querySelectorAll(".section");
-    texts.forEach((text) => {
-      text.addEventListener("scroll", (event) => {
-        text.getBoundingClientRect;
-      });
-    });
+    const texts = document.querySelectorAll(".text");
   </script>
 </html>
