--- a/2.Interactive FAQ Section/index.html
+++ b/2.Interactive FAQ Section/index.html
@@ -56,6 +56,20 @@
         <div class="faq-answer">The course cost is $1000.</div>
       </div>
     </div>
-    <script src="Interactive.js"></script>
+    <script>
+      const faqItems = document.querySelectorAll(".faq-item");
+
+      faqItems.forEach((item) => {
+        const question = item.querySelector(".faq-question");
+        const answer = item.querySelector(".faq-answer");
+
+        question.addEventListener("click", () => {
+          item.classList.toggle("active");
+          answer.style.display = item.classList.contains("active")
+            ? "block"
+            : "none";
+        });
+      });
+    </script>
   </body>
 </html>
